Solve issues and add strings

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:id="@+id/textview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="324 и 34"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="cложить"
+        android:text="@string/sum"
         app:layout_constraintEnd_toEndOf="@+id/textview1"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="@+id/textview1"
@@ -37,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="отнять"
+        android:text="@string/sub"
         app:layout_constraintEnd_toEndOf="@+id/butsum"
         app:layout_constraintStart_toStartOf="@+id/butsum"
         app:layout_constraintTop_toBottomOf="@+id/butsum" />
@@ -47,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="умножить"
+        android:text="@string/multi"
         app:layout_constraintEnd_toEndOf="@+id/butsub"
         app:layout_constraintStart_toStartOf="@+id/butsub"
         app:layout_constraintTop_toBottomOf="@+id/butsub" />
